# openapi-cli-gen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: bugs-from-airflow-testing.md  bugs-live-testing.md  growth-strategy.md  publishing-strategy.md  supported-apis.md
docs/specs/: 2026-04-08-openapi-cli-gen-design.md
docs/superpowers/plans/: 2026-04-09-openapi-cli-gen-v01.md
experiments/: EXPERIMENTS.md  regression_test.py
experiments/prototypes/: 01_pydantic_settings_tree.py  01b_manual_dispatch.py  01c_typer_tree.py  01d_typer_from_pydantic.py  02_nested_flattening.py  03_arrays.py  06_spec_parsing.py  07_model_generation.py  08_end_to_end.py  09_unions.py  10_nullable.py  11_env_vars.py  12_output_formatting.py  13_dynamic_nested_models.py  14_large_spec_performance.py
experiments/server/: app.py  spec.yaml
research/: architecture-references.md  competitive-landscape.md  pydantic-settings-cli-details.md  stainless-design-patterns.md  technical-stack.md  user-research.md
src/openapi_cli_gen/: __init__.py  __main__.py  cli.py
src/openapi_cli_gen/codegen/: generator.py
src/openapi_cli_gen/codegen/templates/: README.md.jinja2  __init__.py.jinja2  cli.py.jinja2  pyproject.toml.jinja2
src/openapi_cli_gen/engine/: auth.py  builder.py  dispatch.py  models.py  registry.py
src/openapi_cli_gen/output/: formatter.py
src/openapi_cli_gen/spec/: loader.py  parser.py
tests/: conftest.py  test_auth.py  test_cli.py  test_codegen.py  test_dispatch.py  test_formatter.py  test_integration.py  test_loader.py  test_models.py  test_parser.py  test_registry.py
wrappers/adguard-home-cli/: README.md
wrappers/immich-rest-cli/: README.md
wrappers/meilisearch-rest-cli/: README.md
wrappers/openai-rest-cli/: README.md
wrappers/qdrant-rest-cli/: README.md
wrappers/typesense-rest-cli/: README.md
